[package]
name = "holter-bridge"
version = "0.1.0"
authors = ["Roman M. <m3angreen@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["blocking", "fs", "stream", "sync", "time", "macros"] }
warp = "0.2"
log = "0.4.8"
pretty_env_logger = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
