[package]
name = "holter-bridge"
version = "0.1.0"
authors = ["Roman M. <m3angreen@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
log = "0.4.8"
percent-encoding = "2.1"
thiserror = "1.0"
tokio = {version="0.2", features=["time", "macros"]}
windows-service = "0.2.0"
clap = "2.33"
warp = "0.2.1"
libusb = "0.3"
async-std = "1.2"
